--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Silicon Private Limited</title>
+    <title>kumaran Private Limited</title>
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
     <link rel = "icon" href ="{% static 'img/titleicon.png' %}" type = "image/x-icon"> 
               
@@ -12,19 +12,19 @@
 <body>
     <div class="container">
     <div class="banner">
-        Silicon Private Limited.
+        kumaran Private Limited.
     </div>
     <div class="menu">
         <div class="menuitem"><a href="/home">Home</a></div> 
         <div class="menuitem"><a href="/products">Products</a></div> 
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div> 
+        <div class="menuitem"><a href="/people">People</a></div>
+        <div class="menuitem"><a href="/contact">Contact Us</a></div> 
     </div><div class="content">
     {% block content %}    
     {% endblock  %}
     </div>
     <div class="footer">
-        Copyright © 2020 Silicon Private Limited, Developed by Obed Otto.
+        Copyright © 2020 kumaran Private Limited, Developed by kumaran.
     </div>
     </div>
 </body>
