--- a/website/templates/website/products.html
+++ b/website/templates/website/products.html
@@ -18,6 +18,76 @@
             <div class="itemname">1TB Laptop HDD</div>
             <div class="itemprice">Price: Rs.5000.00 </div>
         </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/camera.jpg"  alt="product image">
+            </div>
+            <div class="itemname">camera</div>
+            <div class="itemprice">Price: Rs.1999.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/rollerface.jpg"  alt="product image">
+            </div>
+            <div class="itemname">roller face</div>
+            <div class="itemprice">Price: Rs.1319.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/lightmeter.jpg"  alt="product image">
+            </div>
+            <div class="itemname">light meter</div>
+            <div class="itemprice">Price: Rs.1665.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/gunmassager.jpg"  alt="product image">
+            </div>
+            <div class="itemname">gun massager</div>
+            <div class="itemprice">Price: Rs.2050.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/multilead.jpg"  alt="product image">
+            </div>
+            <div class="itemname">multimeter lead</div>
+            <div class="itemprice">Price: Rs.199.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/universalremote.jpg"  alt="product image">
+            </div>
+            <div class="itemname">universal remote</div>
+            <div class="itemprice">Price: Rs.299.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/smartband.jpg"  alt="product image">
+            </div>
+            <div class="itemname">smart band</div>
+            <div class="itemprice">Price: Rs.500.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/pendrive.jpg"  alt="product image">
+            </div>
+            <div class="itemname">pendrive</div>
+            <div class="itemprice">Price: Rs.1299.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/oximeter.jpg"  alt="product image">
+            </div>
+            <div class="itemname">oximeter</div>
+            <div class="itemprice">Price: Rs.2999.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/carmobileholder.jpg"  alt="product image">
+            </div>
+            <div class="itemname">car mobile holder</div>
+            <div class="itemprice">Price: Rs.311.00 </div>
+        </div>
     </div>
     </div>
 {% endblock  %}
