--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -3,8 +3,8 @@
       font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: whitesmoke;
-    color:  #17421D;
+    background-color: palegreen;
+    color:  palegreen;
 }
 .container{
     width: 1080px;
@@ -21,11 +21,11 @@ body{
     height: 250px;
     text-align: center;
     font-size: xx-large;
-    background-image : url("/static/img/chip1.jpg");
+    background-image : url("/static/img/silicon.jpg");
     background-size:cover;
     margin: 0px 0px 0px 0px;
     padding-top: 150px;
-    color: #17421D;
+    color: red;
 }
 
 .menu{
@@ -33,7 +33,7 @@ body{
     width: 100%;
     height: 50px;
     font-size: larger;
-    background-color: #17421D;
+    background-color: greenyellow;
     text-align: center;
     padding-top: 15px;
     margin: 0px 0px 0px 0px;
@@ -119,13 +119,53 @@ body{
     display: block;
 }
 
+peoplecontent{
+    min-height: 500px;
+    margin: 10px 10px 10px 10px;
+}
+
+.peoplecontent h1{
+    text-align: left;    
+}
+
+.peopleitems{
+    display: block;
+}
+
+.peopleitem{
+    display: inline-block;
+    width: 30%;
+    height: 250px;
+    text-align: center;
+}
+
+.peopleitem img{
+    width: 100px;
+    height: 100px;
+    display: block;
+}
+.peopleitem .peopleimage{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    margin-bottom: 5px;
+}
+
+.peopleitem .peoplename{
+    display: block;
+}
+.productitem .designation{
+    display: block;
+}
+
 .footer{
     display: block;
     width: 100%;
     height: 40px;
-    background-color: #17421D;
+    background-color: greenyellow;
     text-align: center;
     padding-top: 10px;
     margin: 0px 0px 0px 0px;
-    color: rgb(218, 214, 214);
+    color: greenyellow;
 }
